5.1
 * Standardize nodetool tablestats formatting of data units (CASSANDRA-19104)
 * Make nodetool tablestats use number of significant digits for time and average values consistently (CASSANDRA-19015)
 * Upgrade jackson to 2.15.3 and snakeyaml to 2.1 (CASSANDRA-18875)
 * Transactional Cluster Metadata [CEP-21] (CASSANDRA-18330)
 * Add ELAPSED command to cqlsh (CASSANDRA-18861)
 * Add the ability to disable bulk loading of SSTables (CASSANDRA-18781)
 * Clean up obsolete functions and simplify cql_version handling in cqlsh (CASSANDRA-18787)
Merged from 5.0:
 * Creating a SASI index after creating an SAI index does not break secondary index queries (CASSANDRA-18939)
 * Optionally fail when a non-partition-restricted query is issued against an index (CASSANDRA-18796)
 * Add a startup check to fail startup when using invalid configuration with certain Kernel and FS type (CASSANDRA-19196)
 * UCS min_sstable_size should not be lower than target_sstable_size lower bound (CASSANDRA-19112)
 * Fix the correspondingMessagingVersion of SSTable format and improve TTL overflow tests coverage (CASSANDRA-19197)
 * Fix resource cleanup after SAI query timeouts (CASSANDRA-19177)
 * Suppress CVE-2023-6481 (CASSANDRA-19184)
Merged from 4.1:
 * Fix StackOverflowError on ALTER after many previous schema changes (CASSANDRA-19166)
 * Memoize Cassandra verion (CASSANDRA-18902)
Merged from 4.0:
Merged from 3.11:
Merged from 3.0:


5.0-beta1
 * Fix SAI intersection queries (CASSANDRA-19011)
 * Clone EndpointState before sending GossipShutdown message (CASSANDRA-19115)
 * SAI indexes are marked queryable during truncation (CASSANDRA-19032)
 * Enable Direct-IO feature for CommitLog files using Java native API's. (CASSANDRA-18464)
 * SAI fixes for composite partitions, and static and non-static rows intersections (CASSANDRA-19034)
 * Improve SAI IndexContext handling of indexed and non-indexed columns in queries (CASSANDRA-18166)